ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: atlantis
spec:
  rules:
  - host: atlantis.domain.com
    http:
      paths:
      - pathType: ImplementationSpecific
        backend:
          service:
            name: atlantis
            port:
              number: 4141
